Correct spacing around the variables

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -102,6 +102,7 @@ footer {
 	margin-top: 30px;
 	text-align: right;
 	margin-right: 2vw;
+	margin-bottom: 4vw;
 
 	a {
 		text-decoration: none;
